Ex0 : own libsvm reading impl

--- a/exercise_01/exercise_01.ipynb
+++ b/exercise_01/exercise_01.ipynb
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "%uv pip install scikit-learn"
+    "%uv pip install scikit-learn numpy"
    ]
   },
   {
@@ -25,22 +25,6 @@
    "metadata": {},
    "source": [
     "# Deep Learning for Natural Language and Code: Exercise 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "7b027f58-0bcf-4e69-afb8-a538753b88a1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-16T07:27:10.097734Z",
-     "start_time": "2025-04-16T07:27:02.573774Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from sklearn.datasets import load_svmlight_file"
    ]
   },
   {
@@ -59,34 +43,199 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed8981d6",
+   "metadata": {},
+   "source": [
+    "A **LIBSVM file** is a plain text file format used to store **sparse datasets** for machine learning tasks, especially **classification** and **regression**. It's called \"LIBSVM\" because it was originally used by the **LIBSVM** library, a very popular library for Support Vector Machines.\n",
+    "\n",
+    "The format looks like this:\n",
+    "\n",
+    "```\n",
+    "<label> <index1>:<value1> <index2>:<value2> <index3>:<value3> ...\n",
+    "```\n",
+    "\n",
+    "- `<label>` = the **target value** (for example, `1` for positive, `-1` for negative).\n",
+    "- `<index>:<value>` = the **non-zero features**.\n",
+    "  - `<index>` is the feature number (starting at 1),\n",
+    "  - `<value>` is the value of that feature (usually the count or some preprocessed weight).\n",
+    "\n",
+    "If a feature is **zero**, it is simply **omitted** from the line (to save space — this is why it's called *sparse* format).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### A real small example:\n",
+    "\n",
+    "Suppose we have two movie reviews turned into a Bag-of-Words (BoW):\n",
+    "- Feature 1 = \"awesome\"\n",
+    "- Feature 2 = \"terrible\"\n",
+    "- Feature 3 = \"boring\"\n",
+    "- Feature 4 = \"amazing\"\n",
+    "\n",
+    "And two reviews:\n",
+    "- Review 1 (positive): \"awesome amazing\"\n",
+    "- Review 2 (negative): \"terrible boring boring\"\n",
+    "\n",
+    "The LIBSVM file would look like:\n",
+    "\n",
+    "```\n",
+    "1 1:1 4:1\n",
+    "-1 2:1 3:2\n",
+    "```\n",
+    "\n",
+    "**Explanation:**\n",
+    "- The first line:\n",
+    "  - `1` → label is positive\n",
+    "  - `1:1` → \"awesome\" appeared once\n",
+    "  - `4:1` → \"amazing\" appeared once\n",
+    "- The second line:\n",
+    "  - `-1` → label is negative\n",
+    "  - `2:1` → \"terrible\" appeared once\n",
+    "  - `3:2` → \"boring\" appeared twice\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Why use LIBSVM format?\n",
+    "\n",
+    "- It's super lightweight for huge datasets where most feature values are 0.\n",
+    "- It's easy to parse and generate manually.\n",
+    "- Many machine learning tools accept this format directly (e.g., SVM, Random Forest, logistic regression)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "288552ef",
+   "metadata": {},
+   "source": [
+    "**What's inside `./aclImdb/train/labeledBow.feat` ?**\n",
+    "\n",
+    "- There are 25 000 lines\n",
+    "- One line per sample\n",
+    "- first element of each line is the label (frol 1 to 10)\n",
+    "- others are the number of apparences of each feature (e.g `0:9 1:1` means feature 0 appeared 9 times and the feature 1 appeared only once)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6f44a368",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import cast\n",
+    "\n",
+    "type Feature = int\n",
+    "type Occurrence = int\n",
+    "type Label = int\n",
+    "\n",
+    "def parse_libsvm_line(line:str) -> tuple[list[tuple[Feature, Occurrence]], Label]:\n",
+    "    label, features = line.split(' ', 1)\n",
+    "    features = features.split(' ')\n",
+    "    features = cast(list[tuple[int, int]], [tuple(map(int, feature.split(':'))) for feature in features])\n",
+    "    return features, int(label)\n",
+    "\n",
+    "assert parse_libsvm_line('1 0:9 1:1 14:87') == ([(0, 9), (1, 1), (14, 87)], 1)\n",
+    "\n",
+    "def parse_libsvm_content(content:str)->list[tuple[list[tuple[Feature, Occurrence]], Label]]:\n",
+    "    return [parse_libsvm_line(line) for line in content.split('\\n') if line]\n",
+    "\n",
+    "assert parse_libsvm_content('1 0:9 1:1 14:87\\n-1 2:1 3:2') == [([(0, 9), (1, 1), (14, 87)], 1), ([(2, 1), (3, 2)],-1)]\n",
+    "\n",
+    "def load_libsvm_file(path:str)->list[tuple[list[tuple[Feature, Occurrence]], Label]]:\n",
+    "    with open(path, 'r') as f:\n",
+    "        return parse_libsvm_content(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4aa2b84a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "labeled_bow_train = load_libsvm_file('./aclImdb/train/labeledBow.feat')\n",
+    "\n",
+    "\n",
+    "def to_numpy(data:list[tuple[list[tuple[Feature, Occurrence]], Label]])->tuple[np.ndarray, np.ndarray]:\n",
+    "    vocabulary_size= max((feature for features, _ in data for feature, _ in features), default=0) + 1\n",
+    "    X = np.zeros((len(data), vocabulary_size))\n",
+    "    y = np.zeros(len(data))\n",
+    "    for i, (line, label) in enumerate(data):\n",
+    "        for feature, occurrence in line:\n",
+    "            X[i, feature] = occurrence\n",
+    "        y[i] = label\n",
+    "    return X, y\n",
+    "\n",
+    "X,y = to_numpy(labeled_bow_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9e4e25e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9.,  1.,  4., ...,  0.,  0.,  0.],\n",
+       "       [ 7.,  4.,  2., ...,  0.,  0.,  0.],\n",
+       "       [ 4.,  4.,  4., ...,  0.,  0.,  0.],\n",
+       "       ...,\n",
+       "       [17.,  6.,  7., ...,  0.,  0.,  0.],\n",
+       "       [15.,  8.,  3., ...,  0.,  0.,  0.],\n",
+       "       [10.,  2.,  2., ...,  0.,  0.,  0.]], shape=(25000, 89527))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "b182ee3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9., 7., 9., ..., 4., 2., 2.], shape=(25000,))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0efb3393-4a19-40bf-9e5c-557bd1331da0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_bow_libsvm(path_data):\n",
-    "    \"\"\" Function for reading the data in the LIBSVM format (.feat files). \n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    dirname: str\n",
-    "        path of this file \n",
-    "    path_data: str\n",
-    "        path of the folder that contains the data that is going to be used. (should be test or train)\n",
-    "        \n",
-    "    Returns\n",
-    "    ---------\n",
-    "    X,y: array_like\n",
-    "        Data arrays, X is an array of shape [#documents of the dataset, #words in the vocabulary], y is an array of shape [#documents,] \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    X, y = load_svmlight_file(os.path.join(\".\",\"aclImdb\", path_data, \"labeledBow.feat\")) \n",
-    "    \n",
-    "    # why?\n",
-    "    X = X.todense()\n",
-    "    \n",
-    "    return X, y"
+    "import os\n",
+    "from sklearn.datasets import load_svmlight_file\n",
+    "\n",
+    "\n",
+    "X_sklearn, y_sklearn = load_svmlight_file('./aclImdb/train/labeledBow.feat')\n",
+    "\n",
+    "assert X_sklearn.shape == X.shape\n",
+    "assert np.allclose(X_sklearn.toarray(), X)\n",
+    "assert np.allclose(y_sklearn, y)\n",
+    "# ->  Good, my implementation is consistent with the sklearn implementation"
    ]
   },
   {
