--- a/exercise_01/exercise_01.ipynb
+++ b/exercise_01/exercise_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6bd8ebb3",
    "metadata": {},
    "outputs": [
@@ -16,7 +16,9 @@
     }
    ],
    "source": [
-    "%uv pip install scikit-learn numpy"
+    "%uv pip install scikit-learn numpy\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6f44a368",
    "metadata": {},
    "outputs": [],
@@ -136,29 +138,10 @@
     "\n",
     "assert parse_libsvm_line('1 0:9 1:1 14:87') == ([(0, 9), (1, 1), (14, 87)], 1)\n",
     "\n",
-    "def parse_libsvm_content(content:str)->list[tuple[list[tuple[Feature, Occurrence]], Label]]:\n",
-    "    return [parse_libsvm_line(line) for line in content.split('\\n') if line]\n",
+    "def parse_libsvm_content(content:str)->tuple[np.ndarray, np.ndarray]:\n",
+    "    \n",
+    "    data=  [parse_libsvm_line(line) for line in content.split('\\n') if line]\n",
     "\n",
-    "assert parse_libsvm_content('1 0:9 1:1 14:87\\n-1 2:1 3:2') == [([(0, 9), (1, 1), (14, 87)], 1), ([(2, 1), (3, 2)],-1)]\n",
-    "\n",
-    "def load_libsvm_file(path:str)->list[tuple[list[tuple[Feature, Occurrence]], Label]]:\n",
-    "    with open(path, 'r') as f:\n",
-    "        return parse_libsvm_content(f.read())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4aa2b84a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "labeled_bow_train = load_libsvm_file('./aclImdb/train/labeledBow.feat')\n",
-    "\n",
-    "\n",
-    "def to_numpy(data:list[tuple[list[tuple[Feature, Occurrence]], Label]])->tuple[np.ndarray, np.ndarray]:\n",
     "    vocabulary_size= max((feature for features, _ in data for feature, _ in features), default=0) + 1\n",
     "    X = np.zeros((len(data), vocabulary_size))\n",
     "    y = np.zeros(len(data))\n",
@@ -168,13 +151,29 @@
     "        y[i] = label\n",
     "    return X, y\n",
     "\n",
-    "X,y = to_numpy(labeled_bow_train)\n"
+    "X, y = parse_libsvm_content('1 0:9 1:1 3:87\\n-1 2:1 3:2')\n",
+    "assert np.all(X== [[9, 1, 0, 87],[0,0,1,2]])\n",
+    "assert np.all(y== [1,-1])\n",
+    "\n",
+    "def load_libsvm_file(path:str)->tuple[np.ndarray, np.ndarray]:\n",
+    "    with open(path, 'r') as f:\n",
+    "        return parse_libsvm_content(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6422fae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = load_libsvm_file('./aclImdb/train/labeledBow.feat')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9e4e25e6",
+   "id": "b8a02a3d",
    "metadata": {},
    "outputs": [
     {
@@ -221,91 +220,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0efb3393-4a19-40bf-9e5c-557bd1331da0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from sklearn.datasets import load_svmlight_file\n",
     "\n",
     "\n",
     "X_sklearn, y_sklearn = load_svmlight_file('./aclImdb/train/labeledBow.feat')\n",
     "\n",
     "assert X_sklearn.shape == X.shape\n",
-    "assert np.allclose(X_sklearn.toarray(), X)\n",
+    "assert np.allclose(X_sklearn.todense(), X)\n",
     "assert np.allclose(y_sklearn, y)\n",
     "# ->  Good, my implementation is consistent with the sklearn implementation"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3db1fe5f-277e-4bf4-9498-8225fe7e9fbe",
+   "cell_type": "markdown",
+   "id": "24b556ad",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def read_vocab():\n",
-    "    \"\"\" Function for reading the vocabulary (.vocab file). \n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    None\n",
-    "        \n",
-    "    Returns\n",
-    "    ---------\n",
-    "    vocab: list\n",
-    "        list with the values of y ...... \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    path_vocab = os.path.join(\".\", \"aclImdb\", \"imdb.vocab\")\n",
-    "    \n",
-    "    with open(path_vocab) as f:\n",
-    "        lines = f.read()\n",
-    "\n",
-    "    lines = lines.split('\\n')\n",
-    "    \n",
-    "    vocab = []\n",
-    "    for line in lines:\n",
-    "        vocab.append(line)\n",
-    "    \n",
-    "    return vocab"
+    "### Vocabulary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "id": "3db1fe5f-277e-4bf4-9498-8225fe7e9fbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the', 'and', 'a', 'of', 'to', 'is', 'it', 'in', 'i', 'this']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "VOCAB_FILE = Path('./aclImdb/imdb.vocab')\n",
+    "assert VOCAB_FILE.exists()\n",
+    "\n",
+    "def read_vocab():\n",
+    "    return VOCAB_FILE.read_text().splitlines()\n",
+    "\n",
+    "\n",
+    "vocab = read_vocab()\n",
+    "\n",
+    "vocab[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "d859674d-6750-4159-a5d0-10238bcce7f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read the vocabulary\n",
-    "vocabulary = read_vocab()\n",
     "# Read the the bag of words and the Y for the training data\n",
-    "X, y = read_bow_libsvm('train')\n",
+    "X, y = load_libsvm_file('./aclImdb/train/labeledBow.feat')\n",
     "# Read the the bag of words and the Y for the test data\n",
-    "X_test, y_test = read_bow_libsvm('test')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "599b19b0-95c0-4675-8e31-299bada4893a",
-   "metadata": {},
-   "source": [
-    "## Understanding the LIBSVM-BOW\n",
-    "1. What are the values in y? \n",
-    "1. Why do we use  todense() in the read_bow_libsvm function?\n",
-    "1. How could you know which word in the vocabulary corresponds to each index in the BOW?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "372421f6-c841-4352-8c85-fab7d9c58ec7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# play with the previous loaded variables and understand the values of each one.\n"
+    "X_test, y_test = load_libsvm_file('./aclImdb/test/labeledBow.feat')"
    ]
   },
   {
