--- a/exercise_03/exercise_03.ipynb
+++ b/exercise_03/exercise_03.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "fbba8a222d9df960",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "0f6ae799",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "0bf348bc",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8274d38b",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "28bcbbb0",
    "metadata": {},
    "outputs": [],
@@ -176,19 +176,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "ff9b6df8eb909544",
    "metadata": {},
    "outputs": [],
    "source": [
     "# apply the pre-processing pipeline\n",
-    "pre_processed_data = preprocess(train_texts_raw, to_lowercase=True)\n",
-    "pre_processed_data_test = preprocess(test_texts_raw, to_lowercase=True)"
+    "pre_processed_data = preprocess(train_texts_raw, to_lowercase=True, tokenize_on_punctuation=True, remove_punctuation_tokens=True, number_replacement_token=\"NUMTOKEN\")\n",
+    "pre_processed_data_test = preprocess(test_texts_raw, to_lowercase=True, tokenize_on_punctuation=True, remove_punctuation_tokens=True, number_replacement_token=\"NUMTOKEN\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "f6f6e905",
    "metadata": {},
    "outputs": [
@@ -198,14 +198,14 @@
      "text": [
       "['for', 'a', 'movie', 'that', 'gets', 'no', 'respect', 'there', 'sure', 'are']...\n",
       "['bizarre', 'horror', 'movie', 'filled', 'with', 'famous', 'faces', 'but', 'stolen', 'by']...\n",
-      "['a', 'solid,', 'if', 'unremarkable', 'film.', 'matthau,', 'as', 'einstein,', 'was', 'wonderful.']...\n",
-      "[\"it's\", 'a', 'strange', 'feeling', 'to', 'sit', 'alone', 'in', 'a', 'theater']...\n",
-      "['you', 'probably', 'all', 'already', 'know', 'this', 'by', 'now,', 'but', 'NUMTOKEN']...\n",
-      "['i', 'saw', 'the', 'movie', 'with', 'two', 'grown', 'children.', 'although', 'it']...\n",
-      "[\"you're\", 'using', 'the', \"imdb.you've\", 'given', 'some', 'hefty', 'votes', 'to', 'some']...\n",
+      "['a', 'solid', 'if', 'unremarkable', 'film', 'matthau', 'as', 'einstein', 'was', 'wonderful']...\n",
+      "['it', 's', 'a', 'strange', 'feeling', 'to', 'sit', 'alone', 'in', 'a']...\n",
+      "['you', 'probably', 'all', 'already', 'know', 'this', 'by', 'now', 'but', 'NUMTOKEN']...\n",
+      "['i', 'saw', 'the', 'movie', 'with', 'two', 'grown', 'children', 'although', 'it']...\n",
+      "['you', 're', 'using', 'the', 'imdb', 'you', 've', 'given', 'some', 'hefty']...\n",
       "['this', 'was', 'a', 'good', 'film', 'with', 'a', 'powerful', 'message', 'of']...\n",
-      "['made', 'after', 'quartet', 'was,', 'trio', 'continued', 'the', 'quality', 'of', 'the']...\n",
-      "['for', 'a', 'mature', 'man,', 'to', 'admit', 'that', 'he', 'shed', 'a']...\n"
+      "['made', 'after', 'quartet', 'was', 'trio', 'continued', 'the', 'quality', 'of', 'the']...\n",
+      "['for', 'a', 'mature', 'man', 'to', 'admit', 'that', 'he', 'shed', 'a']...\n"
      ]
     }
    ],
@@ -226,6 +226,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "0de668e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['000s', '00am', '00pm', '00s', '01pm', '02i', '06th', '08th', '0f', '0ne']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_tokens = set(token for tokens in pre_processed_data for token in tokens )\n",
+    "sorted(list(unique_tokens))[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "aec91f5322befbac",
    "metadata": {},
@@ -238,10 +260,10 @@
     "        self.vocab = None\n",
     "        \n",
     "\n",
-    "    def train(self, texts: List[str]):\n",
+    "    def train(self, texts: list[str]):\n",
     "        pass # todo\n",
     "\n",
-    "    def tokenize(self, text: str) -> List[List[str]]:\n",
+    "    def tokenize(self, text: str) -> list[list[str]]:\n",
     "        pass # todo\n"
    ]
   },
