--- a/exercise_04/exercise_04.ipynb
+++ b/exercise_04/exercise_04.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "id": "4a26dd83",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "id": "06c6b7a1",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "id": "539063c7",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "id": "58625878",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        " [0, 1])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,60 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "45da0bc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "import string\n",
-    "from collections import Counter\n",
-    "\n",
-    "def pre_process(\n",
-    "    reviews: list[str],\n",
-    "    tokenize_punct: bool = False,\n",
-    "    lowercase: bool = False,\n",
-    "    remove_punct: bool = False,\n",
-    "    remove_high_freq_terms: bool = False,\n",
-    "    high_freq_threshold: float = 0.5,\n",
-    "    replace_numbers: bool = False\n",
-    ") -> list[list[str]]:\n",
-    "    processed_reviews: list[list[str]] = []\n",
-    "    punct_set = set(string.punctuation)\n",
-    "    \n",
-    "    for review in reviews:\n",
-    "        text: str = review\n",
-    "        if lowercase:\n",
-    "            text = text.lower()\n",
-    "        if replace_numbers:\n",
-    "            text = re.sub(r'\\d+', '<NUM>', text)\n",
-    "        \n",
-    "        # Tokenize\n",
-    "        if tokenize_punct:\n",
-    "            tokens: list[str] = re.findall(r'\\w+|[^\\w\\s]', text)\n",
-    "        else:\n",
-    "            tokens: list[str] = re.findall(r'\\w+', text)\n",
-    "        \n",
-    "        if remove_punct:\n",
-    "            tokens = [token for token in tokens if token not in punct_set]\n",
-    "        \n",
-    "        processed_reviews.append(tokens)\n",
-    "    \n",
-    "    if remove_high_freq_terms:\n",
-    "        doc_freq = Counter()\n",
-    "        for tokens_list in processed_reviews:\n",
-    "            doc_freq.update(set(tokens_list))\n",
-    "        num_docs: int = len(processed_reviews)\n",
-    "        high_freq_terms = {term for term, freq in doc_freq.items() if freq / num_docs > high_freq_threshold}\n",
-    "        processed_reviews = [[token for token in tokens_list if token not in high_freq_terms] for tokens_list in processed_reviews]\n",
-    "    \n",
-    "    return processed_reviews\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "id": "aae05810",
    "metadata": {},
    "outputs": [
@@ -218,9 +165,6 @@
     "from collections import Counter\n",
     "from typing import List, Set\n",
     "\n",
-    "# ==============================================================================\n",
-    "# ==================== RECOMMENDED pre_process FUNCTION ========================\n",
-    "# ==============================================================================\n",
     "\n",
     "def pre_process(\n",
     "    reviews: List[str],\n",
@@ -380,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "id": "755f7b4069b6260",
    "metadata": {},
    "outputs": [],
@@ -391,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "id": "a25715b4",
    "metadata": {},
    "outputs": [
@@ -610,7 +554,7 @@
        " 'days']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "id": "6afc8ca6d284bf9f",
    "metadata": {},
    "outputs": [
@@ -667,17 +611,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "id": "1b0d180b5bc84ad6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('accumulated', 0)"
+       "('titles', 0)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 10,
    "id": "2caf88602aabaf5",
    "metadata": {},
    "outputs": [
@@ -700,7 +644,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['...', 'concerned', 'cheating', '<PAD>']\n",
+      "['...', 'gilbert', 'yurek', '<PAD>']\n",
       "PAD_TOKEN index: 24876\n"
      ]
     }
@@ -716,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "id": "7d513c5c",
    "metadata": {},
    "outputs": [],
